--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,10 @@
   <meta content="text/html; charset=utf-8" http-equiv="content-type" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
-<!--   <link rel="icon" href="./img/logo.svg" type="image/svg+xml"> -->
-<!--   <link rel="apple-touch-icon" href="./img/pwa/logo-192.png"> -->
+  <link rel="icon" href="./img/logo.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./img/pwa/logo-192.png">
   <meta content="yes" name="apple-mobile-web-app-capable" />
-<!--   <link rel="mask-icon" href="./img/logo.svg" color="#FFFFFF"> -->
+  <link rel="mask-icon" href="./img/logo.svg" color="#FFFFFF">
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="theme-color" content="#ffffff">
   <meta name="referrer" content="origin-when-cross-origin" />
